--- a/latex/text-based-worlds.bib
+++ b/latex/text-based-worlds.bib
@@ -1,11 +1,25 @@
+@article{atkinson_text-based_2019,
+ abstract = {In 2016-2018 at the IEEE Conference on Computational Intelligence in Games, the authors of this paper ran a competition for agents that can play classic text-based adventure games. This competition fills a gap in existing game artificial intelligence (AI) competitions that have typically focused on traditional card/board games or modern video games with graphical interfaces. By providing a platform for evaluating agents in textbased adventures, the competition provides a novel benchmark for game AI with unique challenges for natural language understanding and generation. This paper summarizes the three competitions ran in 2016-2018 (including details of open-source implementations of both the competition framework and our competitors) and presents the results of an improved evaluation of these competitors across 20 games.},
+ author = {Atkinson, Timothy and Baier, Hendrik and Copplestone, Tara and Devlin, Sam and Swan, Jerry},
+ doi = {10.1109/TG.2019.2896017},
+ issn = {2475-1510},
+ journal = {IEEE Transactions on Games},
+ month = {September},
+ number = {3},
+ pages = {260--266},
+ title = {The {Text}-{Based} {Adventure} {AI} {Competition}},
+ volume = {11},
+ year = {2019}
+}
+
 @inproceedings{cote_textworld_2019,
  abstract = {We introduce TextWorld, a sandbox learning environment for the training and evaluation of RL agents on text-based games. TextWorld is a Python library that handles interactive play-through of text games, as well as backend functions like state tracking and reward assignment. It comes with a curated list of games whose features and challenges we have analyzed. More significantly, it enables users to handcraft or automatically generate new games. Its generative mechanisms give precise control over the difficulty, scope, and language of constructed games, and can be used to relax challenges inherent to commercial text games like partial observability and sparse rewards. By generating sets of varied but similar games, TextWorld can also be used to study generalization and transfer learning. We cast text-based games in the Reinforcement Learning formalism, use our framework to develop a set of benchmark games, and evaluate several baseline agents on this set and the curated list.},
  address = {Cham},
  author = {Côté, Marc-Alexandre and Kádár, Ákos and Yuan, Xingdi and Kybartas, Ben and Barnes, Tavian and Fine, Emery and Moore, James and Hausknecht, Matthew and El Asri, Layla and Adada, Mahmoud and Tay, Wendy and Trischler, Adam},
+ booktitle = {Computer {Games}},
  doi = {10.1007/978-3-030-24337-1_3},
  editor = {Cazenave, Tristan and Saffidine, Abdallah and Sturtevant, Nathan},
- isbn = {9783030243371},
- language = {en},
+ isbn = {978-3-030-24337-1},
  pages = {41--75},
  publisher = {Springer International Publishing},
  series = {Communications in {Computer} and {Information} {Science}},
@@ -25,6 +39,87 @@
  title = {Playing {Text}-{Based} {Games} with {Common} {Sense}},
  url = {http://arxiv.org/abs/2012.02757},
  urldate = {2022-04-14},
+ year = {2020}
+}
+
+@article{haroush_learning_2018,
+ abstract = {A DRL agent that learns to eliminate actions in order to solve text-based games with large action spaces},
+ author = {Haroush, Matan and Zahavy, Tom and Mankowitz, Daniel J. and Mannor, Shie},
+ month = {February},
+ title = {Learning {How} {Not} to {Act} in {Text}-based {Games}},
+ url = {https://openreview.net/forum?id=B1-tVX1Pz},
+ urldate = {2022-04-17},
+ year = {2018}
+}
+
+@article{hausknecht_interactive_2020,
+ abstract = {A hallmark of human intelligence is the ability to understand and communicate with language. Interactive Fiction games are fully text-based simulation environments where a player issues text commands to effect change in the environment and progress through the story. We argue that IF games are an excellent testbed for studying language-based autonomous agents. In particular, IF games combine challenges of combinatorial action spaces, language understanding, and commonsense reasoning. To facilitate rapid development of language-based agents, we introduce Jericho, a learning environment for man-made IF games and conduct a comprehensive study of text-agents across a rich set of games, highlighting directions in which agents can improve.},
+ author = {Hausknecht, Matthew and Ammanabrolu, Prithviraj and Côté, Marc-Alexandre and Yuan, Xingdi},
+ copyright = {Copyright (c) 2020 Association for the Advancement of Artificial Intelligence},
+ doi = {10.1609/aaai.v34i05.6297},
+ issn = {2374-3468},
+ journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
+ month = {April},
+ number = {05},
+ pages = {7903--7910},
+ shorttitle = {Interactive {Fiction} {Games}},
+ title = {Interactive {Fiction} {Games}: {A} {Colossal} {Adventure}},
+ url = {https://ojs.aaai.org/index.php/AAAI/article/view/6297},
+ urldate = {2022-05-01},
+ volume = {34},
+ year = {2020}
+}
+
+@article{hausknecht_nail_2019,
+ abstract = {Interactive Fiction (IF) games are complex textual decision making problems. This paper introduces NAIL, an autonomous agent for general parser-based IF games. NAIL won the 2018 Text Adventure AI Competition, where it was evaluated on twenty unseen games. This paper describes the architecture, development, and insights underpinning NAIL's performance.},
+ author = {Hausknecht, Matthew and Loynd, Ricky and Yang, Greg and Swaminathan, Adith and Williams, Jason D.},
+ doi = {10.48550/arXiv.1902.04259},
+ language = {en},
+ month = {February},
+ shorttitle = {{NAIL}},
+ title = {{NAIL}: {A} {General} {Interactive} {Fiction} {Agent}},
+ url = {https://arxiv.org/abs/1902.04259v2},
+ urldate = {2022-05-02},
+ year = {2019}
+}
+
+@misc{interactive_fiction_technology_foundation_interactive_nodate,
+ abstract = {The Interactive Fiction Database is an IF game catalog and recommendation engine. IFDB is a Wiki-style community project: members can add new game listings, write reviews, exchange game recommendations, and more.},
+ author = {Interactive Fiction Technology Foundation},
+ shorttitle = {{IFDB}},
+ title = {The {Interactive} {Fiction} {Database} - {IF} and {Text} {Adventures}},
+ url = {https://ifdb.org/},
+ urldate = {2022-05-02}
+}
+
+@misc{noauthor_adventure_2010,
+ month = {December},
+ title = {Adventure},
+ url = {https://web.archive.org/web/20101227192243/http://www.wurb.com/if/game/1},
+ urldate = {2022-05-01},
+ year = {2010}
+}
+
+@misc{ricks_byu-agent-2016_2019,
+ abstract = {IEEE CIG 2016 Winning agent},
+ author = {Ricks, Daniel},
+ month = {August},
+ title = {{BYU}-{Agent}-2016},
+ url = {https://github.com/danielricks/BYU-Agent-2016},
+ urldate = {2022-05-02},
+ year = {2019}
+}
+
+@book{russell_artificial_2020,
+ address = {Hoboken},
+ author = {Russell, Stuart and Norvig, Peter},
+ edition = {4th edition},
+ isbn = {9780134610993},
+ language = {English},
+ month = {April},
+ publisher = {Pearson},
+ shorttitle = {Artificial {Intelligence}},
+ title = {Artificial {Intelligence}: {A} {Modern} {Approach}},
  year = {2020}
 }
 
