paper thru first half of related work

--- a/latex/text-based-worlds.bib
+++ b/latex/text-based-worlds.bib
@@ -92,6 +92,15 @@
  urldate = {2022-05-02}
 }
 
+@inproceedings{kostka2017text,
+ author = {Kostka, Bartosz and Kwiecieli, Jaroslaw and Kowalski, Jakub and Rychlikowski, Pawel},
+ booktitle = {2017 {IEEE} conference on computational intelligence and games ({CIG})},
+ note = {tex.organization: IEEE},
+ pages = {181--188},
+ title = {Text-based adventures of the golovin {AI} agent},
+ year = {2017}
+}
+
 @misc{noauthor_adventure_2010,
  month = {December},
  title = {Adventure},
