--- a/latex/paper/text-based-worlds.tex
+++ b/latex/paper/text-based-worlds.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{enumitem}
 \usepackage{pifont}
+\usepackage{wrapfig}
 
 \usepackage{hyperref}
 
@@ -14,6 +15,7 @@
 
 \title{Knowledge-based Solutions to Text-based Worlds}
 \author{Morgan Wajda-Levie}
+\date{May 18, 2022}
 
 \begin{document}
 \maketitle
